# dstack-test-task

./: README.md  pyproject.toml
dstack_test_task/: __main__.py  cli.py  logging.py  tasks.py
